--- a/app/home/style.css
+++ b/app/home/style.css
@@ -1,4 +1,5 @@
 .page-container {
   height: calc(100vh - var(--nav-height));
+  /* height: 100vh --nav-height; */
   background-color: whitesmoke;
 }
