--- a/utils/components/navbar/navbar.css
+++ b/utils/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  height: 60px;
+  height: var(--nav-height);
   background-color: #18191a;
 }
 
@@ -42,11 +42,11 @@ nav {
 .arrow {
   padding: 5px;
   height: 10px;
-  width: 10px;
+  width: 8px;
   border-radius: 25px;
   background-color: black;
   position: absolute;
-  right: -2px;
+  right: -0.2px;
   bottom: -5px;
   color: white;
 }
