--- a/utils/components/feed/feed.css
+++ b/utils/components/feed/feed.css
@@ -1,6 +1,6 @@
 .page-container {
   display: flex;
-  flex: 3;
+  flex: 3.5;
   overflow-y: scroll;
   justify-content: space-evenly;
 }
@@ -49,6 +49,20 @@
   margin-bottom: 10px;
 }
 
+.creatPost {
+  display: flex;
+  border-radius: 25px;
+  border-width: 0;
+  background-color: rgb(229, 229, 229);
+  width: 100%;
+  height: 35px;
+  -webkit-text-fill-color: black;
+  padding: 10px;
+}
+
+.creatPost:hover {
+  background-color: rgb(219, 219, 219);
+}
 .feed-actions {
   display: flex;
   align-items: center;
