--- a/utils/components/friendsList/friendsList.css
+++ b/utils/components/friendsList/friendsList.css
@@ -31,22 +31,49 @@
 }
 
 li {
-  padding: 0.7rem;
+  padding: 0.4rem;
   list-style: none;
-  font-family: verdana;
-  font-size: 18px;
-  font-style: oblique;
-  font-weight: bold;
-  color: darkslategrey;
   border-radius: 22px;
   transition: 0.4s;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li:hover {
   background-color: rgb(230, 230, 230);
 }
 
+.name {
+  font-family: verdana;
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: bold;
+  color: darkslategrey;
+}
+
 a {
   text-decoration: none;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+
+}
+
+.icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
